<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Eting</string>
    <string name="menu_settings">Settings</string>
    <string name="introbackgroundimage">IntroBackgroundImage</string>
    <string name="mainbackgroundimage">MainBackgroundImage</string>
    <string name="settingbutton">settingButton</string>
    <string name="mainufo">mainUfo</string>
    <string name="mainacc1">mainAcc1</string>
    <string name="mainacc2">mainAcc2</string>
    <string name="mylistitemdate">mylistItemDate</string>
    <string name="mylistitemcontent">mylistItemContent</string>
    <string name="star">star</string>
    <string name="delbtn">delBtn</string>
    <string name="popuptitle">popupTitle</string>
    <string name="listmyeting">listMyeting</string>
    <string name="writetitlebar">writeTitleBar</string>
    <string name="writebgtop">writeBgTop</string>
    <string name="blank">blank</string>
    <string name="sendstorybutton">sendStoryButton</string>
    <string name="send">send</string>
    <string name="clear">clear</string>

    <!-- 영어 -->
    <string name="eting">eting</string>
    <string name="password_text">password</string>
    <string name="save_text">save</string>
    <string name="inbox_confirm">OK</string>
    <string name="quit">quit</string>
    <string name="really_quit">Do you really want to quit?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="write_story_validate">You cannot write just one letter.</string>
    <string name="write_story_input">Please write your story.</string>
    <string name="enter_you_name">p.s.</string>
    <string name="delete_story">Delete your eting</string>
    <string name="really_delete_story">Do you really want to delete your eting?</string>
    <string name="report_title">report</string>
    <string name="report_message">Do you want to report this message?</string>
    <string name="error_on_transfer">A problem occurred during the transfer.</string>
    <string name="cannot_connect_to_internet">You cannot connect to the Internet.</string>
    <string name="send_completed">Your eting has been sent.</string>
    <string name="wrong_password"> The password you entered is incorrect.</string>
    <string name="save_completed">It has been saved. </string>
    <string name="wrong_input_password">You must enter the same password.</string>
    <string name="wrong_origin_password">Your origin password was incorrectly typed.</string>
    <string name="enter_password_plz">Please enter your password.</string>
    <string name="select_emoticon_plz">Please select emoticons.</string>
    <string name="report_completed">Report completed.</string>
    <string name="have_problem"> A problem occurred.</string>
    <string name="delete_completed">It has been saved.</string>
    <string name="enter_email_plz"> Please enter your email.</string>
    <string name="enter_reply_plz"> Please enter reply.</string>
    <string name="admin_message">admin_message</string>
    <string name="pass_title">pass</string>
    <string name="pass_message">Do you want to pass this message?</string>
    
    <string name="reply_report">reply report</string>
    <string name="really_reply_report">Do you really want to report your reply?</string>
    <string name="reply_del">delete reply</string>
    <string name="really_reply_del">Do you really want to delete your reply?</string>
    
    <string name="reply_title">reply</string>
    <string name="reply_message">Do you want to send this reply?</string>
    
    <string name="write_story_title">eting</string>
    <string name="write_story_message">Do you want to send this eting?</string>
    <string name="adIcon">광고용 아이콘</string>

</resources>