<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mylist_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/mylistitemdate"
            android:textColor="#555555"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/mylist_item_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="50dp"
            android:contentDescription="@string/mylistitemcontent"
            android:singleLine="true"
            android:textColor="#555555"
            android:textSize="16sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center"
        android:layout_margin="20dp"
        android:layout_weight="0"
        android:contentDescription="@string/star" />

</LinearLayout>